--- a/styles/main.scss
+++ b/styles/main.scss
@@ -100,3 +100,8 @@
 
 @import "../styles/components/about";
 
+// modal windows
+
+@import "../styles/components/login-modal";
+@import "../styles/components/remind-password";
+@import "../styles/components/city";
