--- a/styles/main.scss
+++ b/styles/main.scss
@@ -105,3 +105,7 @@
 @import "../styles/components/login-modal";
 @import "../styles/components/remind-password";
 @import "../styles/components/city";
+
+// brand inside page
+
+@import "../styles/components/brand-inside";
