--- a/styles/main.css
+++ b/styles/main.css
@@ -1739,7 +1739,7 @@ input {
   display: grid;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
-      grid-template-areas: "first   first   fifth sixth" "second  third   fifth seventh" "fourth  fourth  eighth eighth";
+      grid-template-areas: "first   first   fifth sixth" "second  third   fifth seventh" "fourth  fourth  eighth eighth";
   gap: 2.5rem;
 }
 
@@ -1879,13 +1879,13 @@ input {
     -ms-grid-rows: auto;
     -ms-grid-columns: (1fr)[2];
         grid-template: auto/repeat(2, 1fr);
-        grid-template-areas: "first   first" "first   first" "second  third" "second  third" "fourth  fourth" "fourth  fourth";
+        grid-template-areas: "first   first" "first   first" "second  third" "second  third" "fourth  fourth" "fourth  fourth";
   }
   .products__right-columns {
     -ms-grid-rows: auto;
     -ms-grid-columns: (1fr)[2];
         grid-template: auto/repeat(2, 1fr);
-        grid-template-areas: "fifth sixth " "fifth sixth " "fifth seventh" "fifth seventh" "eighth eighth";
+        grid-template-areas: "fifth sixth " "fifth sixth " "fifth seventh" "fifth seventh" "eighth eighth";
     gap: 1rem;
     border-radius: 2rem;
   }
@@ -3139,7 +3139,7 @@ input {
   display: -ms-grid;
   display: grid;
   gap: 1rem;
-      grid-template-areas: 'img' 'description' 'footer';
+      grid-template-areas: 'img' 'description' 'footer';
 }
 
 .swiper-card__products.list {
@@ -3249,7 +3249,7 @@ input {
   .swiper-card__products {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
-        grid-template-areas: 'img description' 'img  description' 'img  footer';
+        grid-template-areas: 'img description' 'img  description' 'img  footer';
     gap: 20px;
   }
   .swiper-card__price {
@@ -3306,7 +3306,7 @@ input {
   display: -ms-grid;
   display: grid;
   gap: 2rem;
-      grid-template-areas: "foto description" "foto main" "foto calculation" "foto .. ";
+      grid-template-areas: "foto description" "foto main" "foto calculation" "foto .. ";
   margin-top: 2rem;
 }
 
@@ -3564,7 +3564,7 @@ input {
 
 @media screen and (max-width: 1100px) {
   .card__main {
-        grid-template-areas: "description description" "foto foto" "foto foto" "main main" "calculation calculation";
+        grid-template-areas: "description description" "foto foto" "foto foto" "main main" "calculation calculation";
   }
   .card__header-title {
     width: 630px;
@@ -4600,6 +4600,14 @@ input {
   }
 }
 
+#name-organization {
+  width: 100%;
+}
+
+.account__form-wrapp {
+  max-width: 1019px;
+}
+
 .account__required {
   position: absolute;
   right: 2rem;
@@ -4709,6 +4717,10 @@ input {
           flex-direction: column;
 }
 
+.account__input-wrapp input {
+  width: 49rem;
+}
+
 .account__inputs-block {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -4720,6 +4732,10 @@ input {
           justify-content: space-between;
 }
 
+.account__inputs-block input {
+  width: 23.5rem;
+}
+
 .account__inputs-row {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -4728,6 +4744,7 @@ input {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  width: 49rem;
 }
 
 .account__inputs-row input {
@@ -4741,7 +4758,7 @@ input {
 .account__form input[type='password'] {
   border: 1px solid #cfcfcf;
   border-radius: 3px;
-  min-height: 3.3rem;
+  min-height: 50px;
   font-size: 1.4rem;
   background-clip: padding-box;
   margin: 0 0 3rem 0;
@@ -4786,7 +4803,7 @@ input {
 }
 
 .account__title {
-  font-size: 1.8rem;
+  font-size: 2.2rem;
   font-weight: 900;
   margin: 3rem 0 5rem 0;
 }
@@ -4801,7 +4818,7 @@ input {
 }
 
 .account__personal-data-inputs input {
-  min-width: 25rem;
+  width: 32rem;
 }
 
 .account__organization-data {
@@ -4812,12 +4829,14 @@ input {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 3rem;
-  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 0rem;
 }
 
 .account__organization-data-addresses-legal {
-  width: 100%;
+  width: 490px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -4828,7 +4847,7 @@ input {
 }
 
 .account__organization-data-addresses-actual {
-  width: 100%;
+  width: 490px;
 }
 
 .account__delivery-address {
@@ -4843,8 +4862,9 @@ input {
 }
 
 .account__delivery-address-select-btn select {
-  min-width: 48%;
+  min-width: 49rem;
   cursor: pointer;
+  height: 50px;
 }
 
 .account__delivery-address-select-btn button {
@@ -4893,7 +4913,9 @@ input {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 3rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .account__delivery-address-current.hidden {
@@ -4908,12 +4930,10 @@ input {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  min-width: 44%;
 }
 
 .account__delivery-address-current-right {
   min-width: none;
-  width: 56%;
 }
 
 .account__delivery-add-new-address {
@@ -4951,7 +4971,7 @@ input {
 }
 
 .account__delivery-add-new-address-center input {
-  min-width: 446px;
+  min-width: 490px;
 }
 
 .account__delivery-add-new-address-wrap {
@@ -4969,7 +4989,7 @@ input {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  min-width: 48.5%;
+  width: 100%;
 }
 
 .account__delivery-add-new-address-right {
@@ -4980,7 +5000,7 @@ input {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  min-width: 50%;
+  width: 100%;
 }
 
 .account__delivery-add-new-address-buttons {
@@ -4993,11 +5013,14 @@ input {
 
 .account__password {
   border-bottom: 1px solid #cfcfcf;
+}
+
+.account__password-block {
   width: 50%;
 }
 
-.account__password input {
-  width: 22rem;
+.account__password-block input {
+  width: 320px;
 }
 
 .account__password-create-new {
@@ -5011,15 +5034,16 @@ input {
 
 .account__password-create-new input {
   margin: 0;
-  min-width: 22rem;
+  min-width: 32rem;
 }
 
 .account__remind-pass {
   position: absolute;
-  left: 30%;
+  right: 0;
   color: #95969b;
   text-decoration: underline;
   cursor: pointer;
+  background-color: #fff;
 }
 
 .account__remind-pass:hover {
@@ -5042,9 +5066,9 @@ input {
       -ms-flex-pack: end;
           justify-content: end;
   position: absolute;
-  margin-right: 1rem;
+  margin-right: 10px;
   right: 0;
-  top: 32%;
+  top: 36px;
   opacity: 0.4;
   cursor: pointer;
   -webkit-transition: all 300ms ease;
@@ -5055,63 +5079,180 @@ input {
   opacity: 0.7;
 }
 
-.account_password-icon.old {
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
-  width: 70%;
+.account__old-pass-wrap {
+  position: relative;
+}
+
+.account__old-pass-wrap #old-pass-icon {
+  max-width: 320px;
+  position: absolute;
+  left: -10px;
 }
 
 .account .card__nav {
   width: 230px;
 }
 
+.old-pass-wrap {
+  position: relative;
+  width: 320px;
+}
+
+.old {
+  position: absolute;
+  min-width: 25px;
+}
+
 @media screen and (max-width: 1100px) {
-  .account_password-icon {
-    height: 2rem;
-    width: 2rem;
+  .account__delivery-address-current {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
-  .account_password-icon.old {
+  .account__delivery-address-current.hidden {
     display: none;
+  }
+  .account__delivery-add-new-address-wrap {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    width: 100%;
+  }
+  .account__personal-data-inputs {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .account__personal-data-inputs input {
+    width: 345px;
   }
   .account__tab :checked + .account__tab-title {
     border-bottom: 3px solid #07c47f;
     padding-bottom: 19px;
   }
   .account__delivery-address-current-left {
-    min-width: 48%;
+    width: 100%;
   }
   .account__delivery-address-current-right {
-    width: 53%;
+    width: 100%;
   }
   .account__delivery-add-new-address-center input {
-    min-width: 357px;
+    min-width: 100%;
   }
-  .account__password input {
-    width: 180px;
+  .account__password-block {
+    width: 100%;
   }
-  .account__password-create-new input {
-    min-width: 180px;
+  .account__password-block input {
+    width: 345px;
+  }
+  .account__input-wrapp {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .account__inputs-row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 100%;
+  }
+  .account__inputs-row input {
+    width: 220px;
+  }
+  .account__inputs-block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 100%;
+    height: auto;
+  }
+  .account__inputs-block input {
+    min-width: 220px;
+  }
+  .account__organization-data-addresses {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    width: 100%;
+    gap: 0rem;
+  }
+  .account__organization-data-addresses input {
+    width: 100%;
+  }
+  .account__organization-data-addresses-actual {
+    width: 100%;
+  }
+  .account__organization-data-addresses-legal {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .old-pass-wrap {
+    position: relative;
+    width: 345px;
+  }
+  #current-sity {
+    width: 100%;
+  }
+  #current-street {
+    width: 100%;
+  }
+  #street {
+    width: 100%;
+  }
+  #sity {
+    width: 100%;
+  }
+  #organization-address-legal {
+    width: 100%;
   }
 }
 
 @media screen and (max-width: 480px) {
   .account button {
-    height: 7rem;
+    width: 170px;
+    height: 45px;
+    border-radius: 32px;
     font-size: 14px;
   }
-  .account_password-icon {
-    top: 38%;
-  }
-  .account_password-icon.old {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+  .account__tabs-sing-up-wrapp button {
+    height: 7rem;
     -webkit-box-pack: end;
         -ms-flex-pack: end;
             justify-content: end;
-    height: 2rem;
-    width: 2rem;
+    padding-right: 0;
+    font-size: 10px;
+    width: 50px;
   }
   .account__form input {
     height: 5rem;
@@ -5152,7 +5293,7 @@ input {
     width: 100%;
   }
   .account__delivery-address-select-btn {
-    min-height: 5rem;
+    min-height: 50px;
     gap: 5rem;
     width: 100%;
     display: -webkit-box;
@@ -5190,7 +5331,7 @@ input {
     gap: 1rem;
   }
   .account__remind-pass {
-    left: 79%;
+    display: none;
   }
   .account__organization-data-addresses {
     -webkit-box-orient: vertical;
@@ -5226,6 +5367,10 @@ input {
     font-size: 11px;
     font-weight: 900;
     color: #95969b;
+  }
+  .old-pass-wrap {
+    position: relative;
+    width: 100%;
   }
 }
 
@@ -6302,7 +6447,7 @@ input {
   display: -ms-grid;
   display: grid;
   gap: 16px;
-      grid-template-areas: 'img' 'description' 'footer';
+      grid-template-areas: 'img' 'description' 'footer';
 }
 
 .favorite-product__img-block {
@@ -6541,7 +6686,7 @@ input {
   .favorite-product {
     border-bottom: 1px solid #d2d2d2;
     padding: 20px 0;
-        grid-template-areas: 'img description' 'img description' 'img footer' 'img footer';
+        grid-template-areas: 'img description' 'img description' 'img footer' 'img footer';
     -webkit-column-gap: 3rem;
             column-gap: 3rem;
   }
@@ -7561,7 +7706,7 @@ input {
     padding: 1.5rem;
   }
   .feedback__form {
-        grid-template-areas: "name name name" "phone phone email" "text text text" "politic captcha submit";
+        grid-template-areas: "name name name" "phone phone email" "text text text" "politic captcha submit";
     gap: 4rem;
   }
   .feedback__form input {
@@ -7832,7 +7977,7 @@ input {
     padding: 1.5rem;
   }
   .write-review__form {
-        grid-template-areas: "name name name" "phone phone email" "text text text" "politic captcha submit";
+        grid-template-areas: "name name name" "phone phone email" "text text text" "politic captcha submit";
     gap: 4rem;
   }
   .write-review__form input {
@@ -8819,7 +8964,7 @@ input {
 .login-modal__content {
   display: -ms-grid;
   display: grid;
-      grid-template-areas: "title title" "label-email label-email" "input-email input-email" "label-pass remind" "input-pass input-pass" "btn-block btn-block";
+      grid-template-areas: "title title" "label-email label-email" "input-email input-email" "label-pass remind" "input-pass input-pass" "btn-block btn-block";
   position: relative;
   background: #fff;
   width: 480px;
@@ -9516,6 +9661,127 @@ input {
   }
   .catalog__brand-text:last-child {
     display: none;
+  }
+}
+
+.registration__nav-link {
+  width: 27rem;
+}
+
+.registration__radio-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 16rem;
+}
+
+.registration__natural-person {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 2rem;
+  margin-right: 2rem;
+  height: 70px;
+  width: 32rem;
+  border: 1px solid #10AE73;
+}
+
+.registration__natural-person.not-active {
+  border: 1px dashed rgba(204, 201, 201, 0.5);
+}
+
+.registration__legal-person {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 2rem;
+  height: 70px;
+  width: 32rem;
+  border: 1px dashed rgba(204, 201, 201, 0.5);
+}
+
+.registration__legal-person.active {
+  border: 1px solid #10AE73;
+}
+
+.registration__registration-btn {
+  width: 32rem;
+  height: 5rem;
+  border-radius: 32px;
+}
+
+.registration__registration-btn span {
+  text-decoration: none !important;
+}
+
+.registration__organization-data {
+  display: none;
+}
+
+.registration__footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.registration__footer p {
+  color: #979797;
+  line-height: 2.3rem;
+}
+
+.registration__footer span {
+  text-decoration: underline;
+}
+
+@media screen and (max-width: 1100px) {
+  .registration__radio-block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    min-height: 16rem;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .registration__natural-person {
+    width: 345px;
+  }
+  .registration__legal-person {
+    width: 345px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .registration__footer {
+    height: 100%;
+    width: 100%;
+  }
+  .registration__footer button {
+    width: 100%;
+    height: 45px;
+    font-size: 15px;
+  }
+  .registration__footer p {
+    color: #979797;
+    font-size: 12px;
+    line-height: 4rem;
+  }
+  .registration__footer span {
+    text-decoration: underline;
+  }
+  .registration__footer__natural-person {
+    width: 30%;
+  }
+  .registration__footer__legal-person {
+    width: 30%;
   }
 }
 /*# sourceMappingURL=main.css.map */
