--- a/styles/main.scss
+++ b/styles/main.scss
@@ -109,3 +109,7 @@
 // brand inside page
 
 @import "../styles/components/brand-inside";
+// registration page
+
+@import "../styles/components/registration"
+
